2013-08-26  Paul Eggert  <eggert@cs.ucla.edu>

	* frame.c (check_minibuf_window): Initialize 'window' properly,
	so that Emacs reliably aborts later if 'window' is not initialized.

2013-08-26  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (xg_initialize): Set gtk-menu-bar-accel to "" instead
	of VoidSymbol (Bug#15154).

2013-08-26  Dmitry Antipov  <dmantipov@yandex.ru>

	* lisp.h (Mouse_HLInfo): Drop set-but-unused members
	mouse_face_beg_y and mouse_face_end_y.
	* xdisp.c (note_tool_bar_highlight, mouse_face_from_buffer_pos)
	(mouse_face_from_string_pos, note_mode_line_or_margin_highlight):
	Adjust users and update comment where appropriate.

2013-08-26  Martin Rudalics  <rudalics@gmx.at>

	* frame.c (check_minibuf_window): New function.
	(delete_frame, Fmake_frame_invisible, Ficonify_frame): Call
	check_minibuf_window (Bug#15183).

2013-08-26  Dmitry Antipov  <dmantipov@yandex.ru>

	* window.h (struct window): Replace last_cursor with last_cursor_vpos
	because this is the only last cursor data we need to keep and consult.
	* window.c (replace_window, set_window_buffer, Fsplit_window_internal):
	* xdisp.c (mark_window_display_accurate_1, try_cursor_movement):
	Adjust users.

2013-08-26  Dmitry Antipov  <dmantipov@yandex.ru>

	Fix recovering from possible decompression error.  Since
	insert_from_gap doesn't always move point, we can't use PT as
	the position where the partially decompressed data ends, and
	should count how many bytes was produced so far.
	* decompress.c (struct decompress_unwind_data): Add nbytes member.
	(unwind_decompress): Really delete partially uncompressed data.
	(Fzlib_decompress_region): Take decompressed data size into account.

2013-08-26  Dmitry Antipov  <dmantipov@yandex.ru>

	* syntax.c (init_syntax_once): Adjust comment and do an early
	initialization of Qchar_table_extra_slots just once...
	* casetab.c (init_casetab_once):
	* category.c (init_category_once):
	* character.c (syms_of_character):
	* coding.c (syms_of_coding):